Remove analysis service bearer authentication
